# addressbook-cli

./: README.md  main.py  pyproject.toml
addressbook_cli/: db.py  main.py  utils.py
