[tool.poetry]
name = "addressbook-cli"
version = "0.1.0"
description = ""
authors = ["ize-302 <adavizeozorku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.7"
colorama = "0.4.6"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
pygments = "2.17.2"
rich = "13.7.0"
shellingham = "1.5.4"
typer = "0.9.0"
typing-extensions = "4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
addressbook-cli = "addressbook_cli.main:app"